# MiniGDB

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: function.cpp  hello.cpp  loop.cpp  loopFunction.cpp  segv.cpp  stack_unwinding.cpp  stepOverTest.cpp
include/: breakpoint.hpp  debugger.hpp  registersMapping.hpp
src/: minigbd.cpp
